--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet" />
   </head>
   <body>
-    <main class="w-full min-h-screen bg-zinc-900 flex justify-center items-center">
-      <div class="calculator w-[250px] h-auto py-2 px-2 bg-gray-300 outline-1 outline-gray-500 rounded-md shadow-lg shadow-black flex flex-col gap-6">
-        <section class="logo text-center">CALCULATOR</section>
+    <main class="w-full min-h-screen bg-zinc-900 flex flex-col justify-center items-center gap-8">
+      <div class="calculator w-[250px] h-auto py-2 px-2 bg-gray-300 outline-1 outline-gray-500 rounded-md shadow-lg shadow-black flex flex-col gap-3">
+        <section class="logo text-center text-2xl font-bold animate-gradient-ltr drop-shadow-md">CALCULATOR</section>
+
         <section>
           <div class="flex flex-col-reverse w-full min-h-32 text-3xl p-2 text-right bg-gray-100 rounded-md shadow-inner break-words whitespace-normal overflow-y-auto" id="display" style="font-family: 'Share Tech Mono', monospace">0</div>
         </section>
@@ -21,25 +22,29 @@
           <button class="bg-gray-200 shadow-lg p-2 flex justify-center items-center" data-value="Cut">
             <img src="./Assets/backspace-svgrepo-com.svg" alt="backspace" class="w-6" />
           </button>
-          <button class="bg-gray-200 shadow-lg p-2" data-value="%">%</button>
-          <button class="bg-gray-200 shadow-lg p-2" data-value="/">/</button>
-          <button class="bg-gray-200 shadow-lg p-2" data-value="7">7</button>
-          <button class="bg-gray-200 shadow-lg p-2" data-value="8">8</button>
-          <button class="bg-gray-200 shadow-lg p-2" data-value="9">9</button>
-          <button class="bg-gray-200 shadow-lg p-2" data-value="X">X</button>
-          <button class="bg-gray-200 shadow-lg p-2" data-value="4">4</button>
-          <button class="bg-gray-200 shadow-lg p-2" data-value="5">5</button>
-          <button class="bg-gray-200 shadow-lg p-2" data-value="6">6</button>
-          <button class="bg-gray-200 shadow-lg p-2" data-value="-">-</button>
-          <button class="bg-gray-200 shadow-lg p-2" data-value="1">1</button>
-          <button class="bg-gray-200 shadow-lg p-2" data-value="2">2</button>
-          <button class="bg-gray-200 shadow-lg p-2" data-value="3">3</button>
-          <button class="bg-gray-200 shadow-lg p-2" data-value="+">+</button>
-          <button class="bg-gray-200 shadow-lg p-2" data-value="MT"></button>
-          <button class="bg-gray-200 shadow-lg p-2" data-value="0">0</button>
-          <button class="bg-gray-200 shadow-lg p-2" data-value=".">.</button>
-          <button class="bg-gray-200 shadow-lg p-2" data-value="=">=</button>
+          <button class="bg-gray-200 shadow-lg p-2" data-value="%"><span class="relative z-10">%</span></button>
+          <button class="bg-gray-200 shadow-lg p-2" data-value="/"><span class="relative z-10">/</span></button>
+          <button class="bg-gray-200 shadow-lg p-2" data-value="7"><span class="relative z-10">7</span></button>
+          <button class="bg-gray-200 shadow-lg p-2" data-value="8"><span class="relative z-10">8</span></button>
+          <button class="bg-gray-200 shadow-lg p-2" data-value="9"><span class="relative z-10">9</span></button>
+          <button class="bg-gray-200 shadow-lg p-2" data-value="X"><span class="relative z-10">X</span></button>
+          <button class="bg-gray-200 shadow-lg p-2" data-value="4"><span class="relative z-10">4</span></button>
+          <button class="bg-gray-200 shadow-lg p-2" data-value="5"><span class="relative z-10">5</span></button>
+          <button class="bg-gray-200 shadow-lg p-2" data-value="6"><span class="relative z-10">6</span></button>
+          <button class="bg-gray-200 shadow-lg p-2" data-value="-"><span class="relative z-10">-</span></button>
+          <button class="bg-gray-200 shadow-lg p-2" data-value="1"><span class="relative z-10">1</span></button>
+          <button class="bg-gray-200 shadow-lg p-2" data-value="2"><span class="relative z-10">2</span></button>
+          <button class="bg-gray-200 shadow-lg p-2" data-value="3"><span class="relative z-10">3</span></button>
+          <button class="bg-gray-200 shadow-lg p-2" data-value="+"><span class="relative z-10">+</span></button>
+          <button class="bg-gray-200 shadow-lg p-2" data-value="MT"><span class="relative z-10"></span></button>
+          <button class="bg-gray-200 shadow-lg p-2" data-value="0"><span class="relative z-10">0</span></button>
+          <button class="bg-gray-200 shadow-lg p-2" data-value="."><span class="relative z-10">.</span></button>
+          <button class="bg-gray-200 shadow-lg p-2" data-value="="><span class="relative z-10">=</span></button>
         </section>
+      </div>
+      <div class="flex gap-2 text-center text-gray-600 animate-gradient-ltr items-center">
+        <div class="text-sm">by</div>
+        <div class="text-lg">Ajay Danu</div>
       </div>
     </main>
     <script src="./index.js"></script>
